# ticket_tally

./: Cargo.toml  tailwind.config.js
src/: app.rs  main.rs
